Add info. on dealing with nulls

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -3293,6 +3293,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Dropping and filling nulls\n",
+    "\n",
+    "Pandas has functions for both filling nulls (or N/As) with whatever value you want, or dropping nulls. To fill nulls, we use the `.fillna()` method on the DataFrame, and to drop nulls, we call the `.dropna()` method on the DataFrame. In terms of the `.fillna()` function, we can give it a default value to fill in, or a number of other methods to fill it in (padding, back filling, foward filling). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.fillna('0', inplace=True)\n",
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Creating and Dropping Columns\n",
     "\n",
     "Creating columns is done in one of two ways: (1) Using bracket notation, and (2) Using the `.eval()` method on the Pandas DataFrame. Dropping columns is done using the `.drop()` method on the Pandas DataFrame. When dropping columns, you have to be careful to make sure to tell the DataFrame to drop them in place, or assign the DataFrame with dropped columns to a new variable. You also need to make sure to tell the `.drop()` method what axis the thing you're trying to drop is on (rows are `axis=0`, and columns are `axis=1`)."
@@ -5998,7 +6019,8 @@
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
