Add intro sklearn and random forest run through

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -11,7 +11,7 @@
     "### Pandas Import \n",
     "\n",
     "```python\n",
-    "import pandas as pd\n",
+    "import pandas as pd # This is the standard Pandas import\n",
     "```\n",
     "\n",
     "### Loading External Data\n",
@@ -3295,19 +3295,19 @@
    "source": [
     "### Dropping and filling nulls\n",
     "\n",
-    "Pandas has functions for both filling nulls (or N/As) with whatever value you want, or dropping nulls. To fill nulls, we use the `.fillna()` method on the DataFrame, and to drop nulls, we call the `.dropna()` method on the DataFrame. In terms of the `.fillna()` function, we can give it a default value to fill in, or a number of other methods to fill it in (padding, back filling, foward filling). "
+    "Pandas has functions for both filling nulls (or N/As) with whatever value you want, or dropping nulls. To fill nulls, we use the `.fillna()` method on the DataFrame, and to drop nulls, we call the `.dropna()` method on the DataFrame. In terms of the `.fillna()` function, we can give it a default value to fill in, or a number of other methods to fill it in (padding, back filling, foward filling). You can read about dealing with missing data in the docs [here](http://pandas.pydata.org/pandas-docs/stable/missing_data.html#cleaning-filling-missing-data). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "df.fillna('0', inplace=True)\n",
-    "df.dropna(inplace=True)"
+    "df.dropna(inplace=True) # Notice the addition of the inplace argument here. "
    ]
   },
   {
@@ -7725,6 +7725,397 @@
    "source": [
     "month_dummies = pd.get_dummies(df.month, prefix='month') \n",
     "df.join(month_dummies) # Here we combine on column indices. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scikit-Learn\n",
+    "\n",
+    "Tonight we're going to walk through running a model, and looking at the results. \n",
+    "\n",
+    "### Scikit-learn import\n",
+    "\n",
+    "```python\n",
+    "import sklearn \n",
+    "```\n",
+    "\n",
+    "Typically we're actually going to be importing something from one of the modules/libraries in `sklearn`. The [sklearn main page](http://scikit-learn.org/stable/) can help you determine where you might find something that you are looking for, and the [API reference](http://scikit-learn.org/stable/modules/classes). A large majority of all of the machine learning algorithms you might run can be found somewhere within `sklearn`. Today we're going to talk through using a `Random Forest Regressor`.\n",
+    "\n",
+    "### General workflow\n",
+    "\n",
+    "Here are the steps by which we train a model... \n",
+    "\n",
+    "1.) Import whatever model you'll be fitting.  \n",
+    "2.) Instantiate the model (i.e. create a variable that holds your model object). Set any hyperparameters as you see fit (we'll discuss what these are shortly).   \n",
+    "3.) Feed in the X and Y variables (features and target) to the `.fit()` method.   \n",
+    "4.) Call the `.score()` or `.predict()` method to see how well the model does on the training data (or new data). \n",
+    "\n",
+    "We'll be working with a `RandomForestRegressor` tonight, which you can see the documentation for [here](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor # Import our model. \n",
+    "random_forest = RandomForestRegressor(n_estimators=100) # Instantiate it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create our features (X variables) and target(Y variable). I'm using the forest-fire \n",
+    "data, and for now am only going to use the `X` and `Y` columns (which are the spatial coordinates of the fires) for the features, and the `area` column for the target (this is defined as the dependent variable on the UCI website where I got this data). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>FFMC</th>\n",
+       "      <th>DMC</th>\n",
+       "      <th>DC</th>\n",
+       "      <th>ISI</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>RH</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>area</th>\n",
+       "      <th>wind_plus)area</th>\n",
+       "      <th>wind_plus_area</th>\n",
+       "      <th>wind_plus_area2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>86.2</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>94.3</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>51</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>6.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>oct</td>\n",
+       "      <td>tue</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>669.1</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>oct</td>\n",
+       "      <td>sat</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>43.7</td>\n",
+       "      <td>686.9</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>91.7</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>97</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>sun</td>\n",
+       "      <td>89.3</td>\n",
+       "      <td>51.3</td>\n",
+       "      <td>102.2</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   X  Y month  day  FFMC   DMC     DC  ISI  temp  RH  wind  area  \\\n",
+       "0  7  5   mar  fri  86.2  26.2   94.3  5.1   8.2  51   6.7     0   \n",
+       "1  7  4   oct  tue  90.6  35.4  669.1  6.7  18.0  33   0.9     0   \n",
+       "2  7  4   oct  sat  90.6  43.7  686.9  6.7  14.6  33   1.3     0   \n",
+       "3  8  6   mar  fri  91.7  33.3   77.5  9.0   8.3  97   4.0     0   \n",
+       "4  8  6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8     0   \n",
+       "\n",
+       "   wind_plus)area  wind_plus_area  wind_plus_area2  \n",
+       "0             6.7             6.7              6.7  \n",
+       "1             0.9             0.9              0.9  \n",
+       "2             1.3             1.3              1.3  \n",
+       "3             4.0             4.0              4.0  \n",
+       "4             1.8             1.8              1.8  "
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head() # Examine the data first to see what we still have in there. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "features = df[['X','Y']]\n",
+    "target = df['area']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=100, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_forest.fit(features, target) # Fit/train the model (i.e. build the model based off the training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.032297138999585639"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_forest.score(features, target) # This .score() gives you the R^2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "predictions = random_forest.predict(features) # This gives us back a vector of predictions\n",
+    "                                              # (one for each observation). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In terms of metrics, the [sklearn.metrics](http://scikit-learn.org/stable/modules/classes#sklearn-metrics-metrics) documentation will give you an idea of any of the metrics you can use to judge a model. The majority of these take the format of a fuction call where you input `(y_predictions, y_observations)`, and they output the calculated metric. We'll look at mean squared error below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3913.6086627\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "mse = mean_squared_error(predictions, target)\n",
+    "print mse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This looks terrible! We're doing awful. Let's see if we can add in something else and get better. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.200970415323\n"
+     ]
+    }
+   ],
+   "source": [
+    "features = df[['X','Y', 'wind']]\n",
+    "target = df['area']\n",
+    "random_forest.fit(features, target)\n",
+    "print random_forest.score(features, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3231.45588421\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = random_forest.predict(features)\n",
+    "print mean_squared_error(predictions, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try one more variable. I imagine the `month` could be pretty important. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: nov",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-144-5b5ffb984971>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeatures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'X'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Y'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wind'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'month'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'area'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mrandom_forest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/sallamander/anaconda/lib/python2.7/site-packages/sklearn/ensemble/forest.pyc\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    210\u001b[0m         \"\"\"\n\u001b[1;32m    211\u001b[0m         \u001b[0;31m# Validate or convert input data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 212\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"csc\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    213\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0missparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m             \u001b[0;31m# Pre-sort indices to avoid that each individual tree of the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/sallamander/anaconda/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    371\u001b[0m                                       force_all_finite)\n\u001b[1;32m    372\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 373\u001b[0;31m         \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    374\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    375\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: nov"
+     ]
+    }
+   ],
+   "source": [
+    "features = df[['X','Y', 'wind', 'month']]\n",
+    "target = df['area']\n",
+    "random_forest.fit(features, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What went wrong here? It turns out that most of the algorithms we use don't accept strings as inputs, but rather expect numeric values. The way to fix this would be to create dummy variables for the months (I'll leave that as an exercise for you). "
    ]
   },
   {
