Add cross validation notes and code

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -7757,14 +7757,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 188,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor # Import our model. \n",
-    "random_forest = RandomForestRegressor(n_estimators=100) # Instantiate it. "
+    "random_forest = RandomForestRegressor(n_estimators=500) # Instantiate it. "
    ]
   },
   {
@@ -8081,7 +8081,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try one more variable. I imagine the `month` could be pretty important. "
+    "Much better! But let's try one more variable. I imagine the `month` could be pretty important. "
    ]
   },
   {
@@ -8115,7 +8115,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What went wrong here? It turns out that most of the algorithms we use don't accept strings as inputs, but rather expect numeric values. The way to fix this would be to create dummy variables for the months (I'll leave that as an exercise for you). "
+    "What went wrong here? It turns out that most of the algorithms we use don't accept strings as inputs, but rather expect numeric values. The way to fix this would be to create dummy variables for the months (I'll leave that as an exercise for you). \n",
+    "\n",
+    "So, we have run two models now, and saw that the second one performed better. We could keep adding in variables into our model, checking the R^2 and our MSE after adding in any variable. But we're not actually running our model on any data that we aren't training it on, so how do we know that what we are putting into our model would actually help on data that we've never seen. In other words, how do we tell if our model will generalize well? The answer is **cross validation**.\n",
+    "\n",
+    "The way that **cross validation** works is that we break our data into `k` number of folds (typically 5 or 10). We train our model on `k-1` of those folds, and then predict on the `kth` fold. We take those predictions, and then get our scoring metric (`mean squared error`, in our case) using those predictions. We then do this again, and again, and again, until each of the `k` folds has been used for predictions (so with 5 folds, we do this 5 times, and with 10 folds, 10 times, etc.)\n",
+    "\n",
+    "![cross-val-image](http://i.stack.imgur.com/1fXzJ.png)\n",
+    "\n",
+    "Using **cross validation**, we can get an idea of how our model would perform on data it hasn't seen before, and then when we add in variables into our model (or change model parameters), we can be more sure that they were actually worth putting into our model.\n",
+    "\n",
+    "Best of all, it turns out that sklearn has a library we can use for this! Check out the [cross validation library](http://scikit-learn.org/stable/modules/classes#module-sklearn.cross_validation) for all the details. Today we'll be looking at the `cross_val_score` function, which allows you to pass in a model, a target (Y), a feature set (X), a number of folds (5 or 10, for example), and a scoring function (we'll use our mean_squared_error). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  -439.63833088,   -165.74937494,   -495.85851913,   -499.6096956 ,\n",
+       "          -58.35452545,   -274.42921848,   -308.36964577,   -174.1516431 ,\n",
+       "        -1915.24160208, -50460.51107106,   -126.65527045,   -551.38281731,\n",
+       "         -421.80105036,   -138.82602648,  -1256.22572264, -21478.36994861,\n",
+       "        -1553.74348743,   -466.63508499,  -3355.18710752,   -358.51762831])"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cross_validation import cross_val_score\n",
+    "features = df[['X','Y']]\n",
+    "target = df['area']\n",
+    "results = cross_val_score(random_forest, features, target, cv=20, scoring='mean_squared_error')\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4224.9628885297234"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-results.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5094.5317905556485"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = df[['X', 'Y', 'wind']]\n",
+    "target = df['area']\n",
+    "results = cross_val_score(random_forest, features, target, cv=20, scoring='mean_squared_error')\n",
+    "-results.mean()"
    ]
   },
   {
