Add GridSearchCV notes and code

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -153,12 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "df = pd.read_csv('data/forestfires.csv')"
    ]
   },
@@ -7757,14 +7758,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor # Import our model. \n",
-    "random_forest = RandomForestRegressor(n_estimators=500) # Instantiate it. "
+    "random_forest = RandomForestRegressor(n_estimators=100) # Instantiate it. "
    ]
   },
   {
@@ -8203,6 +8204,221 @@
     "target = df['area']\n",
     "results = cross_val_score(random_forest, features, target, cv=20, scoring='mean_squared_error')\n",
     "-results.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross-validation is a crucial part of a data-scientists workflow. We have to make sure that our model will generalize well, and cross-validation is a way to make sure that we are putting the right variables into our model. It can also be used to check our model hyper-parameters (for a random forest, this might be the number of trees, the depth of each tree, etc.). `Sklearn` also has a built in to perform cross-validation over hyperparameters. It is located in the `sklearn.grid_search` module, and it is called `GridSearchCV`. As arguments, it takes an estimator/model (such as our Random Forest) and a parameter grid (dictionary). We instantiate it with these, and then we call the `.fit()` method on it, passing it our features and target. It returns back to us the best parameters to use for our model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "random_forest = RandomForestRegressor()\n",
+    "param_grid = {'n_estimators': [10, 100, 500], 'max_depth': [1, 3, 5]}\n",
+    "grid_search_cv = GridSearchCV(random_forest, param_grid, scoring='mean_squared_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score='raise',\n",
+       "       estimator=RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False),\n",
+       "       fit_params={}, iid=True, n_jobs=1,\n",
+       "       param_grid={'n_estimators': [10, 100, 500], 'max_depth': [1, 3, 5]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, scoring='mean_squared_error',\n",
+       "       verbose=0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = df[['X', 'Y', 'wind']]\n",
+    "target = df['area']\n",
+    "grid_search_cv.fit(features, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "best_model = grid_search_cv.best_estimator_ # Get a copy of the best model. \n",
+    "best_params = grid_search_cv.best_params_ # Get a dictionary of the best parameters. \n",
+    "best_score = grid_search_cv.best_score_ # Get the best score of scoring function we passed in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 1, 'n_estimators': 100}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4177.2154829491374"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score='raise',\n",
+       "       estimator=RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False),\n",
+       "       fit_params={}, iid=True, n_jobs=1,\n",
+       "       param_grid={'n_estimators': [10, 100, 500], 'max_depth': [1, 3, 5]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, scoring='mean_squared_error',\n",
+       "       verbose=0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = df[['X', 'Y']]\n",
+    "target = df['area']\n",
+    "grid_search_cv.fit(features, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_model = grid_search_cv.best_estimator_ # Get a copy of the best model. \n",
+    "best_params = grid_search_cv.best_params_ # Get a dictionary of the best parameters. \n",
+    "best_score = grid_search_cv.best_score_ # Get the best score of scoring function we passed in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 1, 'n_estimators': 500}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4170.1028584947999"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With all this being said, we can kind of re-define/re-work the steps in our general workflow... \n",
+    "\n",
+    "1.) Import whatever model you'll be fitting.  \n",
+    "2.) Instantiate the model (i.e. create a variable that holds your model object). Set any hyperparameters as you see fit (we'll discuss what these are shortly).   \n",
+    "3.) Feed in the X and Y variables (features and target) to the `.fit()` method.   \n",
+    "4.) Call the `.score()` or `.predict()` method to see how well the model does on the training data (or new data). \n",
+    "5.) Repeat steps (2) - (4) to find the best model given your chosen scoring metric. "
    ]
   },
   {
