Add motivation intro, clean dataframe creation section

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -4,9 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Where are we Going?\n",
+    "\n",
+    "Tonight we're going to work through the data science workflow. We'll start off by looking at how we work with DataFrames, manipulating their contents to get them in the format we want. We'll then move on to looking at a real data set and running some models with it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03319004916028534"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "df = pd.read_csv('data/forestfires.csv')\n",
+    "features = df[['X', 'Y']]\n",
+    "target = df['area']\n",
+    "\n",
+    "random_forest = RandomForestRegressor(n_estimators=100)\n",
+    "random_forest.fit(features, target)\n",
+    "random_forest.score(features, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Intro to Pandas \n",
     "\n",
-    "To start, we're going to look at how to get data into a DataFrame and how to look at that data. Pandas DataFrames are a class, and when we interact with these dataframes, we will be interacting with objects, accessing the dataframes fields just like we would any other objects, and manipulating the dataframe data via its methods. \n",
+    "To start, we're going to look at how to get data into a DataFrame and how to look at that data. Pandas DataFrames are a class, and when we interact with these dataframes, we will be interacting with objects, accessing the dataframe's fields just like we would any other objects, and manipulating the dataframe's data via its methods. \n",
     "\n",
     "### Pandas Import \n",
     "\n",
@@ -16,17 +56,31 @@
     "\n",
     "### Loading External Data\n",
     "\n",
-    "The [Pandas documentation](http://pandas.pydata.org/pandas-docs/stable/io.html) will show you all of the ways that you could load external data into a DataFrame. Basically, there is a way to load in data in any format that you might want to load it in from (CSV, JSON, SQL, Excel, HTML). All of these take some form of a `read_` method. So, if we wanted to load data in from a CSV, we would simply use: \n",
+    "The [Pandas documentation](http://pandas.pydata.org/pandas-docs/stable/io.html) will show you all of the ways that you could load external data into a DataFrame. Basically, there is a way to load in data in any format that you might want to load it in from (CSV, JSON, SQL, Excel, HTML). All of these take some form of a `read_(data_type)` method. So, if we wanted to load data in from a CSV, we would simply use: \n",
     "\n",
     "```python\n",
     "df = pd.read_csv('my_data.csv')\n",
     "```\n",
     "\n",
-    "**Note**: You need to have the column names as the first row in the `.csv`. \n",
+    "**Note**: This assumes that you have the column names in the first row of your `.csv`.\n",
+    "\n",
+    "If you don't have the column names in the first row of your `.csv`, you could read in the `.csv` with the following: \n",
+    "\n",
+    "```python \n",
+    "df = pd.read_csv('my_data.csv', header=None)\n",
+    "```\n",
+    "\n",
+    "**Note**: This by default assigns numbers as the column names (starting with 0).\n",
+    "\n",
+    "If you wanted to assign the column names as you read it in, you can pass in an additional `names` argument, where this `names` argument holds a list of the names you want to assign to the columns.\n",
+    "\n",
+    "```python \n",
+    "df = pd.read_csv('my_data.csv', header=None, names=['col1', 'col2', ...., 'col12'])\n",
+    "```\n",
     "\n",
     "### Instantiating a DataFrame with data from your Python program\n",
     "\n",
-    "If we are instantiating a DataFrame from data that already exists in our program, there are a couple of ways we can do this. One is by using the DataFrame constructor and passing in a list of dictionaries. Pandas will create columns with the names as the keys in the dictionary, and the values as the values in the dictionary. It will fill in values for any column that has a value present, and N/A's elsewhere. Another way of doing this is to pass in a list of lists of values as the `data` argument and another list as the `columns` argument."
+    "If we are instantiating a DataFrame from data that already exists in our program, there are a couple of ways we can do this. One is by using the DataFrame constructor and passing in a list of dictionaries. Pandas will create columns with the names as the keys in the dictionary, and the values as the values in the dictionary. It will fill in values for any column that has a value present, and N/A's elsewhere (this can be useful when working with JSON data)."
    ]
   },
   {
@@ -85,6 +139,13 @@
     "data_lst = [{'a': 1, 'b': 2, 'c':3}, {'a': 4, 'b':5, 'c':6, 'd':7}]\n",
     "df = pd.DataFrame(data_lst)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way of creating a dataframe from data that is already in our Python program is to pass in a list of lists as the `data` argument and a list of strings as the `columns` argument. The `pd.DataFrame()` constructor will assume that each individual list in the `data` argument is one row (i.e. if you pass in a list of 5 lists, your dataframe will have 5 rows). Below we pass in a list of two lists, and as a result our dataframe has two rows. "
    ]
   },
   {
